# embind_demo

./: .gitignore  CMakeLists.txt  README.md  binding.cpp  emcc_cmake.sh  glue_wrapper.cpp  hello.cpp  hello.h  hello.idl  index.html  index.js  justfile  library.js  package.json  reactive.cpp  reactive.h  wasm-module1.cpp  wasm-module1.h  webidl.html
